# pong

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-devto.yml  release.yml
articles/: 2026-07-pong-v0-0-1-productivity-devto.md
docs/: installing.md
scripts/: check-version.mjs  check-workflows.mjs  claude_automation.js  fake-dashboard.html
src/: App.svelte  App.test.ts  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  monitor.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml  report-health.toml  report-usage.toml
src-tauri/src/: agent.js  config.rs  health.rs  injection.rs  lib.rs  main.rs  monitor.rs  scheduler.rs  state.rs  tray.rs  usage.rs
src-tauri/tests/: acl_test.rs  agent_js_test.rs  config_test.rs
src/lib/: HistoryView.svelte  HistoryView.test.ts  SettingsView.svelte  SettingsView.test.ts  StatusBadge.svelte  StatusBadge.test.ts  Toggle.svelte  UsageView.svelte  api.test.ts  api.ts  configForm.test.ts  configForm.ts  format.test.ts  format.ts  types.ts  usageColor.test.ts  usageColor.ts
src/test/: setup.ts
